load("@rules_scala//scala:scala.bzl", "scala_library", "scala_test")

package(
    default_visibility = ["//dicer:internal"],
)

scala_library(
    name = "load_map",
    srcs = ["src/LoadMap.scala"],
    deps = [
        "//caching/util:assert_macros",
        "//dicer/common:load_measurement",
        "//dicer/common:slice_helper",
        "//dicer/common:slicekey_helper",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "algorithm",
    srcs = [
        "src/Algorithm.scala",
        "src/AlgorithmExecutor.scala",
        "src/ConstraintPhase.scala",
        "src/DeallocationPhase.scala",
        "src/MergePhase.scala",
        "src/MutableAssignment.scala",
        "src/PlacementPhase.scala",
        "src/Resources.scala",
        "src/Splitter.scala",
    ],
    exports = ["//dicer/assigner/config:internal_target_config"],
    deps = [
        ":load_map",
        "//caching/util:assert_macros",
        "//caching/util:intrusive_min_heap",
        "//caching/util:prefix_logger",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/common:assignment_core",
        "//dicer/common:load_measurement",
        "//dicer/common:slice_helper",
        "//dicer/common:slicekey_helper",
        "//dicer/common:target_helper",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
    ],
)


scala_library(
    name = "algorithm_test_base",
    srcs = ["test/AlgorithmSuiteBase.scala"],
    testonly = True,
    deps = [
        ":algorithm",
        ":load_map",
        "//caching/util:fake_typed_clock",
        "//caching/util:metric_utils",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/common:assignment_core",
        "//dicer/common:generation",
        "//dicer/common:target_helper",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "algorithm_test",
    srcs = ["test/AlgorithmSuite.scala"],
    deps = [
        ":algorithm",
        ":algorithm_test_base",
        ":load_map",
        "//caching/util:fake_typed_clock",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/assigner:assignment_stats",
        "//dicer/common:assignment_core",
        "//dicer/common:generation",
        "//dicer/common:slicekey_helper",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "non_parameterized_algorithm_test",
    srcs = ["test/NonParameterizedAlgorithmSuite.scala"],
    deps = [
        ":algorithm",
        ":algorithm_test_base",
        ":load_map",
        "//caching/util:fake_typed_clock",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/assigner:assignment_stats",
        "//dicer/assigner:migration_test_assignment",
        "//dicer/common:assignment_core",
        "//dicer/common:generation",
        "//dicer/common:slicekey_helper",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:mutable_slice_map",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:com_google_guava_guava",
    ],
)

scala_test(
    name = "algorithm_chaos_test",
    srcs = ["test/AlgorithmChaosSuite.scala"],
    deps = [
        ":algorithm",
        ":algorithm_test_base",
        ":load_map",
        "//caching/util:ascii_table",
        "//caching/util:fake_typed_clock",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/assigner:assignment_stats",
        "//dicer/common:assignment_core",
        "//dicer/common:generation",
        "//dicer/common:slicekey_helper",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "load_map_test",
    srcs = ["test/LoadMapSuite.scala"],
    timeout = "short",
    deps = [
        ":load_map",
        "//caching/util:test_util",
        "//dicer/common:generation",
        "//dicer/common:slicekey_helper",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "mutable_assignment_test",
    srcs = ["test/MutableAssignmentSuite.scala"],
    timeout = "short",
    deps = [
        ":algorithm",
        ":load_map",
        "//caching/util:fake_typed_clock",
        "//caching/util:unix_time_version",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/common:assignment_core",
        "//dicer/common:generation",
        "//dicer/common:slicekey_helper",
        "//dicer/common:test_common",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)
