load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")

proto_library(
    name = "client_dpage_proto_library",
    srcs = ["client_dpage.proto"],
    visibility = ["//dicer:internal"],
    deps = [
        "//dicer/common/proto:dpage_proto_library",
        "//wrappers/rpc:scalapb_proto",
    ],
)

scala_proto_library(
    name = "client_dpage_proto_scala_lib",
    visibility = ["//dicer:internal"],
    deps = [":client_dpage_proto_library"],
)
