load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//caching/oss:__pkg__"],
)

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    visibility = ["//dicer:internal"],
    deps = [
        "//dicer/friend/proto:friend_proto_library",
        "//wrappers/rpc:scalapb_proto",
    ],
)

scala_proto_library(
    name = "common_proto_scala_lib",
    visibility = [
        "//caching/util:__pkg__",
        "//dicer/client:__pkg__",
        "//dicer:internal",
    ],
    deps = [":common_proto"],
)
