load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")

proto_library(
    name = "friend_proto_library",
    srcs = ["friend.proto"],
    visibility = ["//visibility:public"],
    deps = ["//wrappers/rpc:scalapb_proto"],
)

scala_proto_library(
    name = "friend_protolib",
    visibility = ["//visibility:public"],
    deps = [":friend_proto_library"],
)
