load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")

package(
    default_visibility = ["//caching/util:internal"],
)

proto_library(
    name = "example_config_override_proto_library",
    srcs = ["example_config_override.proto"],
    deps = [
        "//caching/external/proto:config_scope_specification_proto_library",
        "//wrappers/rpc:scalapb_proto",
    ],
)

scala_proto_library(
    name = "example_config_override",
    deps = [":example_config_override_proto_library"],
)

proto_library(
    name = "test_data_proto",
    srcs = ["test_data.proto"],
    visibility = ["//caching/util:internal"],
    deps = ["//wrappers/rpc:scalapb_proto"],
)

scala_proto_library(
    name = "test_data_proto_scala_lib",
    visibility = ["//caching/util:internal"],
    deps = [":test_data_proto"],
)
