load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//caching/oss:__pkg__"],
)

proto_library(
    name = "advanced_target_config_proto",
    srcs = ["advanced_target_config.proto"],
    visibility = ["//dicer:internal"],
    deps = [
        "//caching/external/proto:config_scope_specification_proto_library",
        "//dicer/external/proto:target_proto_library",
        "//wrappers/rpc:scalapb_proto",
    ],
)

scala_proto_library(
    name = "advanced_target_config_scala_lib",
    visibility = ["//dicer:internal"],
    deps = [":advanced_target_config_proto"],
)

proto_library(
    name = "internal_target_config_proto",
    srcs = ["internal_target_config.proto"],
    visibility = ["//dicer:internal"],
    deps = [
        ":advanced_target_config_proto",
        "//dicer/external/proto:target_proto_library",
        "//wrappers/rpc:scalapb_proto",
    ],
)

scala_proto_library(
    name = "internal_target_config_scala_lib",
    visibility = ["//dicer:internal"],
    deps = [":internal_target_config_proto"],
)
