
filegroup(
    name = "data",
    srcs = [
        "assignment_test_data.textproto",
        "client_request_test_data.textproto",
        "client_response_test_data.textproto",
        "cross_cluster_clerk_accessor_test_data.textproto",
        "diff_assignment_test_data.textproto",
        "fatal_target_mismatch_test_data.textproto",
        "generation_test_data.textproto",
        "resource_address_test_data.textproto",
        "slice_assignment_test_data.textproto",
        "slice_key_test_data.textproto",
        "slice_load_test_data.textproto",
        "slice_map_test_data.textproto",
        "slice_set_test_data.textproto",
        "slicelet_data_test_data.textproto",
        "slicelet_load_accumulator_test_data.textproto",
        "slicelet_test_data.textproto",
        "squid_test_data.textproto",
        "target_test_data.textproto",
        "transfer_test_data.textproto",
    ],
    visibility = ["//dicer:internal"],
)
