load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_scala//scala_proto:scala_proto.bzl", "scala_proto_library")

proto_library(
    name = "test_data_proto",
    srcs = ["test_data.proto"],
    visibility = ["//dicer:internal"],
    deps = [
        "//dicer/common/proto:common_proto",
        "//dicer/friend/proto:friend_proto_library",
        "//wrappers/rpc:scalapb_proto",
    ],
)

java_proto_library(
    name = "test_data_proto_java_lib",
    visibility = ["//dicer:internal"],
    deps = [":test_data_proto"],
)

scala_proto_library(
    name = "test_data_proto_scala_lib",
    visibility = ["//dicer:internal"],
    deps = [":test_data_proto"],
)

proto_library(
    name = "clerk_test_driver_proto",
    srcs = ["clerk_test_driver.proto"],
    visibility = ["//dicer:internal"],
    deps = [
        "//dicer/common/proto:common_proto",
        "//wrappers/rpc:scalapb_proto",
    ],
)

scala_proto_library(
    name = "clerk_test_driver_proto_scala_lib",
    visibility = ["//dicer:internal"],
    deps = [":clerk_test_driver_proto"],
)

proto_library(
    name = "slicelet_test_driver_proto",
    srcs = ["slicelet_test_driver.proto"],
    visibility = ["//dicer:internal"],
    deps = [
        "//dicer/common/proto:common_proto",
        "//dicer/friend/proto:friend_proto_library",
        "//wrappers/rpc:scalapb_proto",
    ],
)

scala_proto_library(
    name = "slicelet_test_driver_proto_scala_lib",
    visibility = ["//dicer:internal"],
    deps = [":slicelet_test_driver_proto"],
)
